--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Build
+build
+
+# SR Output
+resetCommands.txt
+starRatingsCommands.txt
+starRatingsReadable.txt
